@startuml analytics-service
title <size:16><b>AnalyticsService</b></size>\n<color:#555>Диаграмма классов (schema: analytics)</color>

' ─── Глобальные настройки стиля ──────────────────────────────────────────────
skinparam defaultFontName "Segoe UI", Arial, sans-serif
skinparam defaultFontSize 13
skinparam roundcorner 10
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam nodesep 60
skinparam ranksep 70

skinparam class {
    BackgroundColor White
    HeaderBackgroundColor #FFF3E0
    BorderColor #E65100
    BorderThickness 1.2
    ArrowColor #E65100
    ArrowThickness 1.2
    AttributeFontColor #2C3E50
}

skinparam enum {
    BackgroundColor White
    HeaderBackgroundColor #FBE9E7
    BorderColor #BF360C
    BorderThickness 1.2
}

skinparam note {
    BackgroundColor #FFF9C4
    BorderColor #FBC02D
    FontColor #4E342E
    BorderThickness 1.2
    roundcorner 6
}

skinparam stereotypeCBackgroundColor #FFE0B2
skinparam stereotypeABackgroundColor #FDEBD0
skinparam stereotypeEBackgroundColor #D5F5E3

' ─── Enums ───────────────────────────────────────────────────────────────────

enum PeriodType {
    Daily
    Weekly
    Monthly
}

enum StockAlertType {
    OutOfStock
    LowStock
}

' ════════════════════════════════════════════════════════
'  SELLER ANALYTICS — агрегаты для продавца
' ════════════════════════════════════════════════════════

class SellerSalesSummary <<read model>> {
    + Id : Guid <<PK>>
    + SellerId : Guid <<logical ref: Identity>>
    ..период..
    + PeriodType : PeriodType
    + PeriodStart : DateOnly
    ..метрики выручки..
    + TotalRevenue : decimal
    + OrderCount : int
    + AverageOrderValue : decimal
    ..метрики заказов..
    + CompletedCount : int
    + CancelledCount : int
    + DisputedCount : int
    + UpdatedAt : DateTimeOffset
}

class TopProduct <<read model>> {
    + Id : Guid <<PK>>
    + SellerId : Guid <<logical ref: Identity>>
    + ProductId : Guid <<logical ref: Catalog>>
    + ProductName : string <<snapshot>>
    ..метрики..
    + TotalSold : int
    + TotalRevenue : decimal
    + ViewCount : int
    + FavoriteCount : int
    + PeriodStart : DateOnly
    + PeriodType : PeriodType
    + UpdatedAt : DateTimeOffset
}

class SellerRatingHistory <<read model>> {
    + Id : Guid <<PK>>
    + SellerId : Guid <<logical ref: Identity>>
    + RecordedAt : DateOnly
    + AverageRating : decimal
    + ReviewCount : int
    + NewReviewsToday : int
}

class StockAlert <<event log>> {
    + Id : Guid <<PK>>
    + SellerId : Guid <<logical ref: Identity>>
    + ProductId : Guid <<logical ref: Catalog>>
    + ProductName : string <<snapshot>>
    + CurrentStock : int
    + AlertType : StockAlertType
    + IsAcknowledged : bool
    + AcknowledgedAt : DateTimeOffset?
    + CreatedAt : DateTimeOffset
}

class ProductViewCounter <<read model>> {
    + ProductId : Guid <<PK, logical ref: Catalog>>
    + SellerId : Guid <<logical ref: Identity>>
    + TotalViews : int
    + ViewsToday : int
    + ViewsThisWeek : int
    + LastViewedAt : DateTimeOffset
}

' ════════════════════════════════════════════════════════
'  PLATFORM ANALYTICS — агрегаты для администратора
' ════════════════════════════════════════════════════════

class PlatformDailySummary <<read model>> {
    + Id : Guid <<PK>>
    + Date : DateOnly <<unique>>
    ..пользователи..
    + NewRegistrations : int
    + ActiveBuyers : int
    + ActiveSellers : int
    + BlockedUsers : int
    ..заказы..
    + TotalOrders : int
    + CompletedOrders : int
    + CancelledOrders : int
    + DisputedOrders : int
    ..финансы..
    + GrossMerchandiseValue : decimal
    + AverageOrderValue : decimal
    ..контент..
    + NewProducts : int
    + NewReviews : int
    + UpdatedAt : DateTimeOffset
}

class SellerLeaderboard <<read model>> {
    + Id : Guid <<PK>>
    + SellerId : Guid <<logical ref: Identity>>
    + SellerName : string <<snapshot>>
    + ShopId : Guid? <<logical ref: Catalog>>
    + ShopName : string? <<snapshot>>
    + PeriodType : PeriodType
    + PeriodStart : DateOnly
    ..метрики (из событий)..
    + TotalRevenue : decimal
    + OrderCount : int
    + AverageRating : decimal
    ..ранги (batch-сервис каждые 6ч)..
    + RevenueRank : int
    + OrderCountRank : int
    + RanksComputedAt : DateTimeOffset?
    + UpdatedAt : DateTimeOffset
}

class DisputeSummary <<read model>> {
    + Id : Guid <<PK>>
    + Date : DateOnly <<unique>>
    + OpenedCount : int
    + ResolvedCount : int
    + BuyerFavoredCount : int
    + SellerFavoredCount : int
    + AverageResolutionMinutes : decimal
    + UpdatedAt : DateTimeOffset
}

class ProductRatingSummary <<read model>> {
    + Id : Guid <<PK>>
    + ProductId : Guid <<logical ref: Catalog>>
    + SellerId : Guid <<logical ref: Identity>>
    + ProductName : string <<snapshot>>
    + ShopId : Guid? <<logical ref: Catalog>>
    + ShopName : string? <<snapshot>>
    + AverageRating : decimal
    + ReviewCount : int
    + UpdatedAt : DateTimeOffset
}

class GeographicActivity <<read model>> {
    + Id : Guid <<PK>>
    + ComplexId : Guid <<logical ref: Identity>>
    + ComplexName : string <<snapshot>>
    + PeriodType : PeriodType
    + PeriodStart : DateOnly
    ..активность..
    + ActiveSellers : int
    + ActiveBuyers : int
    + TotalOrders : int
    + TotalRevenue : decimal
    + UpdatedAt : DateTimeOffset
}

' ─── Relationships ────────────────────────────────────────────────────────────

SellerSalesSummary  ..> PeriodType
TopProduct          ..> PeriodType
SellerLeaderboard   ..> PeriodType
GeographicActivity  ..> PeriodType
StockAlert          ..> StockAlertType

' ─── Notes ───────────────────────────────────────────────────────────────────

note right of SellerSalesSummary
  Источник: OrderStatusChangedEvent,
  OrderCompletedEvent.
  UNIQUE INDEX: (SellerId, PeriodType, PeriodStart).
  AverageOrderValue = TotalRevenue / OrderCount —
  пересчитывается в consumer, не хранится отдельно.
end note

note right of SellerLeaderboard
  ShopId = null → строка агрегирует
  все магазины продавца суммарно.
  ShopId != null → строка для конкретного магазина.
  Оба типа создаются в OrderCompletedConsumer.
  Ранги пересчитываются фоновым сервисом
  LeaderboardComputeBackgroundService (каждые 6ч).
  UNIQUE INDEX: (SellerId, ShopId, PeriodType, PeriodStart).
end note

note right of ProductRatingSummary
  Инициализируется из OrderCompletedEvent
  (при первом заказе с этим товаром).
  Рейтинг обновляется через
  RatingAggregateUpdatedEvent
  (SubjectType == "Product").
  Кросс-сервисный агрегат: объединяет
  данные из Catalog + Review в одном месте.
end note

note right of ProductViewCounter
  PK = ProductId (нет Entity<Guid>).
  ViewsToday и ViewsThisWeek сбрасываются
  ViewCountResetBackgroundService:
  ViewsToday  → каждую полночь
  ViewsThisWeek → каждый понедельник
end note

note right of DisputeSummary
  BuyerFavoredCount / SellerFavoredCount
  берутся из DisputeResolvedEvent.Outcome.
  AverageResolutionMinutes считается
  по полю ResolutionMinutes события.
end note

note right of PlatformDailySummary
  Один документ = один день.
  ActiveBuyers/ActiveSellers = уникальные
  участники заказов за день (из OrderPlacedEvent).
  NewProducts ← ProductCreatedEvent (planned).
  NewReviews  ← ReviewCreatedEvent (planned).
  Date: UNIQUE INDEX.
end note

note bottom of GeographicActivity
  ComplexId — из IdentityService.
  Требует добавления ComplexId в OrderPlacedEvent.
  До добавления события таблица не заполняется.
end note

' ─── Сводная таблица сущностей ───────────────────────────────────────────────

legend bottom
  <b>Таблицы сервиса (schema: analytics)</b>
  |= Класс C# |= Таблица в БД |= Кто видит |= Основной источник событий |
  | SellerSalesSummary | SellerSalesSummaries | Продавец + Admin | OrderStatusChangedEvent, OrderCompletedEvent |
  | TopProduct | TopProducts | Продавец + Admin | OrderCompletedEvent, ProductViewedEvent, FavoriteChangedEvent |
  | SellerRatingHistory | SellerRatingHistory | Продавец + Admin | RatingAggregateUpdatedEvent |
  | StockAlert | StockAlerts | Продавец | StockDepletedEvent |
  | ProductViewCounter | ProductViewCounters | Продавец + Admin | ProductViewedEvent |
  | PlatformDailySummary | PlatformDailySummaries | Только Admin | OrderPlacedEvent, UserRegisteredEvent, UserBlockedEvent, ProductCreatedEvent*, ReviewCreatedEvent* |
  | SellerLeaderboard | SellerLeaderboards | Только Admin | OrderCompletedEvent + batch (ShopId=null: суммарно, ShopId!=null: по магазину) |
  | DisputeSummary | DisputeSummaries | Только Admin | DisputeOpenedEvent, DisputeResolvedEvent |
  | GeographicActivity | GeographicActivities | Только Admin | OrderPlacedEvent (requires ComplexId*) |
  | ProductRatingSummary | ProductRatingSummaries | Продавец + Admin | OrderCompletedEvent (init), RatingAggregateUpdatedEvent (rating) |
  \n  * — planned events
endlegend

@enduml
